rubocop/examples/good/style_RaiseArgs.rb
# TODO: This cop checks the args passed to `fail` and `raise`.
