rubocop/examples/bad/Style_SignalException.rb
# TODO: This cop checks for uses of `fail` and `raise`.

# TODO: 'Use `fail` instead of `raise` to signal exceptions.'
# TODO: 'Use `raise` instead of `fail` to rethrow exceptions.'
